- NavFollowerStats.less: Fix style for larger counts in badges - NavFollowerStatsModal.template.pug: Fix latest subscriber date not showing - Move PageNotFound.component.ts to ErrorPages.module.ts, so it only gets loaded when needed by the lazy loader

--- a/src/app/+dash/declarations/NavFollowerStats.less
+++ b/src/app/+dash/declarations/NavFollowerStats.less
@@ -6,8 +6,8 @@ nav-follower-stats-component {
     margin-left: -0.6em;
     background-color: #666666;
     line-height: 1.2em;
-    width: 1.2em;
-    border-radius: 50%;
-    border: 3px solid @primary-color;
+    border-radius: 1.2em;
+    border: 3px solid #c2185b;
+    padding: 0 .4em;
   }
 }
